# update-data

.github/: dependabot.yml
.github/workflows/: deploy.yml  update-dict-manifest.yml  update-hook-manifest.yml
automation/: README.md  check_mirror.py  check_mirrors.py  dict_manifest_config.yaml  dict_manifest_generate.py  dict_manifest_update.py  generate_encoding_config.py  hook_manifest_add.py  hook_manifest_add.toml  hook_manifest_update.py  pyproject.toml
metadata/: dict.json  dict_v3.json  hook.json  hook_v2.json  hook_v3.json
store/encodings/: cp857.toml  latin3.toml  viscii.toml
store/offsets/: 51.01-beta18_steam_linux64.toml  51.01_steam_linux64.toml  51.01_steam_win64.toml  51.02_classic_linux64.toml  51.02_classic_win64.toml  51.02_itchio_linux64.toml  51.02_itchio_win64.toml  51.02_steam_linux64.toml  51.02_steam_win64.toml  51.03_itchio_linux64.toml  51.03_itchio_win64.toml  51.03_steam_linux64.toml  51.03_steam_win64.toml  51.04_steam_linux64.toml  51.04_steam_win64.toml  51.05_classic_linux64.toml  51.05_classic_win64.toml  51.05_itchio_linux64.toml  51.05_itchio_win64.toml  51.05_steam_linux64.toml  51.05_steam_win64.toml  51.06_classic_linux64.toml  51.06_classic_win64.toml  51.06_itchio_linux64.toml  51.06_itchio_win64.toml  51.06_steam_linux64.toml  51.06_steam_win64.toml  51.07_classic_linux64.toml  51.07_classic_win64.toml  51.07_itchio_linux64.toml  51.07_itchio_win64.toml  51.07_steam_linux64.toml  51.07_steam_win64.toml  51.08_classic_linux64.toml  51.08_classic_win64.toml  51.08_itchio_linux64.toml  51.08_itchio_win64.toml  (+106 more)
(+2 files in other folders)
